--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -1812,13 +1812,271 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:speechbrain.utils.fetching:Fetch hyperparams.yaml: Fetching from HuggingFace Hub 'speechbrain/metricgan-plus-voicebank' if not cached\n",
+      "INFO:speechbrain.utils.fetching:Fetch custom.py: Fetching from HuggingFace Hub 'speechbrain/metricgan-plus-voicebank' if not cached\n",
+      "INFO:speechbrain.utils.fetching:Fetch enhance_model.ckpt: Fetching from HuggingFace Hub 'speechbrain/metricgan-plus-voicebank' if not cached\n",
+      "INFO:speechbrain.utils.parameter_transfer:Loading pretrained files for: enhance_model\n",
+      "/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages/speechbrain/utils/checkpoints.py:200: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state_dict = torch.load(path, map_location=device)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torchaudio\n",
+    "from speechbrain.inference.enhancement import SpectralMaskEnhancement\n",
+    "\n",
+    "enhance_model = SpectralMaskEnhancement.from_hparams(\n",
+    "    source=\"speechbrain/metricgan-plus-voicebank\",\n",
+    "    savedir=\"pretrained_models/metricgan-plus-voicebank\",\n",
+    ")\n",
+    "\n",
+    "# Load and add fake batch dimension\n",
+    "noisy = enhance_model.load_audio(\n",
+    "    \"../test_0.wav\"\n",
+    ").unsqueeze(0)\n",
+    "\n",
+    "# Add relative length tensor\n",
+    "enhanced = enhance_model.enhance_batch(noisy, lengths=torch.tensor([1.]))\n",
+    "\n",
+    "# Saving enhanced signal on disk\n",
+    "torchaudio.save('speechbrain_metricgan.wav', enhanced.cpu(), 16000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "INFO:speechbrain.utils.quirks:Applied quirks (see `speechbrain.utils.quirks`): [allow_tf32, disable_jit_profiling]\n",
+      "INFO:speechbrain.utils.quirks:Excluded quirks specified by the `SB_DISABLE_QUIRKS` environment (comma-separated list): []\n",
+      "INFO:speechbrain.utils.fetching:Fetch hyperparams.yaml: Fetching from HuggingFace Hub 'speechbrain/mtl-mimic-voicebank' if not cached\n",
+      "INFO:speechbrain.utils.fetching:Fetch custom.py: Fetching from HuggingFace Hub 'speechbrain/mtl-mimic-voicebank' if not cached\n",
+      "INFO:speechbrain.utils.fetching:Fetch enhance_model.ckpt: Fetching from HuggingFace Hub 'speechbrain/mtl-mimic-voicebank' if not cached\n",
+      "INFO:speechbrain.utils.parameter_transfer:Loading pretrained files for: enhance_model\n",
+      "/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages/speechbrain/utils/checkpoints.py:200: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state_dict = torch.load(path, map_location=device)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchaudio\n",
+    "from speechbrain.inference.enhancement import WaveformEnhancement\n",
+    "\n",
+    "enhance_model = WaveformEnhancement.from_hparams(\n",
+    "    source=\"speechbrain/mtl-mimic-voicebank\",\n",
+    "    savedir=\"pretrained_models/mtl-mimic-voicebank\",\n",
+    ")\n",
+    "enhanced = enhance_model.enhance_file(\"../test_0.wav\")\n",
+    "\n",
+    "# Saving enhanced signal on disk\n",
+    "torchaudio.save('speechbrain_mimic.wav', enhanced.unsqueeze(0).cpu(), 16000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Ignoring invalid distribution ~ympy (/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0mCollecting MPSENet\n",
+      "  Using cached mpsenet-1.0.3-py3-none-any.whl.metadata (1.7 kB)\n",
+      "Requirement already satisfied: einops in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (0.8.0)\n",
+      "Requirement already satisfied: huggingface-hub in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (0.23.5)\n",
+      "Requirement already satisfied: joblib in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (1.4.2)\n",
+      "Requirement already satisfied: librosa in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (0.10.2.post1)\n",
+      "Requirement already satisfied: numpy in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (1.24.4)\n",
+      "Requirement already satisfied: soundfile in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (0.12.1)\n",
+      "Requirement already satisfied: torch in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from MPSENet) (2.5.1+cu124)\n",
+      "Requirement already satisfied: filelock in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (3.13.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (2024.2.0)\n",
+      "Requirement already satisfied: packaging>=20.9 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (24.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (6.0.2)\n",
+      "Requirement already satisfied: requests in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (2.31.0)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from huggingface-hub->MPSENet) (4.12.2)\n",
+      "Requirement already satisfied: audioread>=2.1.9 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (3.0.1)\n",
+      "Requirement already satisfied: scipy>=1.2.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (1.9.3)\n",
+      "Requirement already satisfied: scikit-learn>=0.20.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (1.5.2)\n",
+      "Requirement already satisfied: decorator>=4.3.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (5.1.1)\n",
+      "Requirement already satisfied: numba>=0.51.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (0.60.0)\n",
+      "Requirement already satisfied: pooch>=1.1 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (1.8.2)\n",
+      "Requirement already satisfied: soxr>=0.3.2 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (0.5.0.post1)\n",
+      "Requirement already satisfied: lazy-loader>=0.1 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (0.4)\n",
+      "Requirement already satisfied: msgpack>=1.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from librosa->MPSENet) (1.1.0)\n",
+      "Requirement already satisfied: cffi>=1.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from soundfile->MPSENet) (1.17.1)\n",
+      "Requirement already satisfied: networkx in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (3.1.3)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.4.127 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.4.127)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.4.127 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.4.127)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.4.127 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.4.127)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu12==9.1.0.70 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (9.1.0.70)\n",
+      "Requirement already satisfied: nvidia-cublas-cu12==12.4.5.8 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.4.5.8)\n",
+      "Requirement already satisfied: nvidia-cufft-cu12==11.2.1.3 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (11.2.1.3)\n",
+      "Requirement already satisfied: nvidia-curand-cu12==10.3.5.147 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (10.3.5.147)\n",
+      "Requirement already satisfied: nvidia-cusolver-cu12==11.6.1.9 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (11.6.1.9)\n",
+      "Requirement already satisfied: nvidia-cusparse-cu12==12.3.1.170 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.3.1.170)\n",
+      "Requirement already satisfied: nvidia-nccl-cu12==2.21.5 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (2.21.5)\n",
+      "Requirement already satisfied: nvidia-nvtx-cu12==12.4.127 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.4.127)\n",
+      "Requirement already satisfied: nvidia-nvjitlink-cu12==12.4.127 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (12.4.127)\n",
+      "Requirement already satisfied: triton==3.1.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (3.1.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from torch->MPSENet) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from sympy==1.13.1->torch->MPSENet) (1.3.0)\n",
+      "Requirement already satisfied: pycparser in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from cffi>=1.0->soundfile->MPSENet) (2.22)\n",
+      "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from numba>=0.51.0->librosa->MPSENet) (0.43.0)\n",
+      "Requirement already satisfied: platformdirs>=2.5.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from pooch>=1.1->librosa->MPSENet) (4.3.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from requests->huggingface-hub->MPSENet) (3.3.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from requests->huggingface-hub->MPSENet) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from requests->huggingface-hub->MPSENet) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from requests->huggingface-hub->MPSENet) (2023.7.22)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from scikit-learn>=0.20.0->librosa->MPSENet) (3.5.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages (from jinja2->torch->MPSENet) (2.1.5)\n",
+      "Using cached mpsenet-1.0.3-py3-none-any.whl (6.6 kB)\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution ~ympy (/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0mInstalling collected packages: MPSENet\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution ~ympy (/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0mSuccessfully installed MPSENet-1.0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install MPSENet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10485760 9091584\n"
+     ]
+    }
+   ],
+   "source": [
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "from MPSENet import MPSENet\n",
+    "import torch\n",
+    "\n",
+    "model_id = \"JacobLinCool/MP-SENet-VB\" # \"JacobLinCool/MP-SENet-DNS\"\n",
+    "model = MPSENet.from_pretrained(model_id).to('cuda:0')\n",
+    "print(torch.cuda.memory_reserved(), torch.cuda.memory_allocated())\n",
+    "x, sr = librosa.load(\"../test_0.wav\", sr=model.sampling_rate)\n",
+    "y, sr, notation = model(x)\n",
+    "sf.write(\"MPSENet_VB.wav\", y, sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10485760 9091584\n"
+     ]
+    }
+   ],
+   "source": [
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "from MPSENet import MPSENet\n",
+    "import torch\n",
+    "\n",
+    "model_id = \"JacobLinCool/MP-SENet-DNS\"\n",
+    "model = MPSENet.from_pretrained(model_id).to('cuda:0')\n",
+    "print(torch.cuda.memory_reserved(), torch.cuda.memory_allocated())\n",
+    "x, sr = librosa.load(\"../test_0.wav\", sr=model.sampling_rate)\n",
+    "y, sr, notation = model(x)\n",
+    "sf.write(\"MPSENet_DNS.wav\", y, sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5240231 -0.30705267\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z.max(), z.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kzipa/anaconda3/envs/test/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import librosa\n",
+    "import soundfile as sf\n",
+    "from MPSENet import MPSENet\n",
+    "import torch\n",
+    "\n",
+    "m1 = MPSENet.from_pretrained(\"JacobLinCool/MP-SENet-DNS\").to('cuda:0')\n",
+    "m2 = MPSENet.from_pretrained(\"JacobLinCool/MP-SENet-VB\").to('cuda:0')\n",
+    "x, sr = librosa.load(\"../test_0.wav\", sr=m1.sampling_rate)\n",
+    "y, sr, notation = m1(x)\n",
+    "z, sr, notation = m2(y)\n",
+    "sf.write(\"MPSENet_DNS+VB.wav\", z, sr) # number of repeats doesn't affect the result"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kapitza",
+   "display_name": "test",
    "language": "python",
    "name": "python3"
   },
@@ -1832,7 +2090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
